--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="login.js"></script>
 </head>
 <body style="background-color: bisque;">
     
@@ -12,12 +13,13 @@
         <br>
         <form>
         <label>USER NAME :</label>
-        <input type="text" style="width: 250px;height: 25px;" placeholder="Enter your username" required><br><br>
+        <input type="text" style="width: 250px;height: 25px;" id="user" placeholder="Enter your username" required><br><br>
         <label>PASSWORD :</label>
-        <input type="text" style="width: 250px;height: 25px;" placeholder="Enter your password" required>
+        <input type="text" id="pass" style="width: 250px;height: 25px;" placeholder="Enter your password" required>
         <br><br>
         <a href="https://www.google.com/search?sca_esv=9931d7f4e0845048&q=img&source=lnms&fbs=AEQNm0Aa4sjWe7Rqy32pFwRj0UkWd8nbOJfsBGGB5IQQO6L3JzWreY9LW7LdGrLDAFqYDH3DF_waBUhtl7i7Xh3ndQb6Rus4Y6uQNobQgPwFdWtDnn1iyVr6Uu1wxrDDBCcOoN4gfhTHnAJTGxy7vQWSmNOj97V83cHDkIYRTKdMy1MK62Gbd5jewfaEFNzmiEPCKhH4h-a_wV67n0rDdTVEd_QvTh1xlA&sa=X&ved=2ahUKEwjCjqu8xa6KAxX7ma8BHfXcHmYQ0pQJegQIFBAB&cshid=1734429620122080&biw=1280&bih=632&dpr=1.5">forgot password</a>
-        <br><br><button>Submit</button>
+        <br><br><button id="submit">Submit</button>
+        <p id="error"></p>
         <p>create a new account <br><a href="signup.html">signup</a></p>
     </div>
 </form>
